--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
         <div class="footer">
             <p><strong>Master of Ceremony:</strong> John Weda</p>
             <p style="margin-top: 10px;">Thank you for celebrating with us!</p>
+              <p style="margin-top: 15px; font-size: 0.85em; color: #a0aec0;">© Robert Weda</p>
         </div>
     </div>
 </body>
