--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <div class="time">3:30 PM – 4:00 PM</div>
                 <div class="details">
                     <div class="activity">Gift Presentation</div>
-                    <div class="facilitator"><strong>By:</strong> Rose / Yvonne</div>
+                    <div class="facilitator"><strong>By:</strong> Eric / Regis</div>
                 </div>
             </div>
 
@@ -218,7 +218,7 @@
                 <div class="time">4:20 PM – 4:30 PM</div>
                 <div class="details">
                     <div class="activity">Cake Cutting</div>
-                    <div class="facilitator"><strong>By:</strong> Barrack / Omondi</div>
+                    <div class="facilitator"><strong>By:</strong> Roseline</div>
                 </div>
             </div>
 
@@ -227,7 +227,7 @@
                 <div class="time">4:30 PM – 4:35 PM</div>
                 <div class="details">
                     <div class="activity">Vote of Thanks</div>
-                    <div class="facilitator"><strong>By:</strong> Erick / Regis</div>
+                    <div class="facilitator"><strong>By:</strong> John</div>
                 </div>
             </div>
 
