--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
                 <div class="time">4:35 PM – 4:40 PM</div>
                 <div class="details">
                     <div class="activity">Closing Prayer & Benediction</div>
-                    <div class="facilitator"><strong>By:</strong> Roseline</div>
+                    <div class="facilitator"><strong>By:</strong> Eunice</div>
                 </div>
             </div>
 
           
         <div class="footer">
-            <p><strong>Master of Ceremony:</strong> John Weda</p>
+            <p><strong>Master of Ceremony:</strong> John Weda / Nancy</p>
             <p style="margin-top: 10px;">Thank you for celebrating with us!</p>
               <p style="margin-top: 15px; font-size: 0.85em; color: #a0aec0;">© Robert Weda</p>
         </div>
