--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="activity">Purpose of Meeting</div>
                     <div class="subsection">a) Cleon's</div>
                     <div class="subsection">b) Nyikwa weda</div>
-                    <div class="facilitator"><strong>By:</strong> John/ Nancy Caro Pipi Rose Yvonne </div>
+                    <div class="facilitator"><strong>By:</strong> Caro Josephine Shaline Yvonne Pipi </div>
                 </div>
             </div>
 
