--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="details">
                     <div class="activity">Purpose of Meeting - Caro Pipi
                     Josephine Yvonne</div>
-                    <div class="subsection">a) Cleon's</div>
+                    <div class="subsection">a) Cleon's - Caro Pipi Josephine Yvonne</div>
                     <div class="subsection">b) Nyikwa weda - Barrack/ Omondi</div>
                     <div class="facilitator"><strong>By:</strong> Caro Josephine Shaline Yvonne Pipi </div>
                 </div>
