--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
             <div class="program-item">
                 <div class="time">2:30 PM – 3:30 PM</div>
                 <div class="details">
-                    <div class="activity">Purpose of Meeting - Caro Pipi
-                    Josephine Yvonne</div>
+                    <div class="activity">Purpose of Meeting</div>
                     <div class="subsection">a) Cleon's - Caro Pipi Josephine Yvonne</div>
                     <div class="subsection">b) Nyikwa weda - Barrack/ Omondi</div>
                     
