--- a/index.html
+++ b/index.html
@@ -259,7 +259,10 @@
         <div class="footer">
             <p><strong>Master of Ceremony:</strong> John Weda / Nancy</p>
             <p style="margin-top: 10px;">Thank you for celebrating with us!</p>
-              <p style="margin-top: 15px; font-size: 0.85em; color: #a0aec0;">© Robert Weda</p>
+            
+            <p style="margin-top: 15px; font-size: 0.85em; color: #a0aec0;">
+  © <a href="https://portfolio-smoky-eight-89.vercel.app/" target="_blank" rel="noopener noreferrer" style="color: #a0aec0; text-decoration: none;">Robert Weda</a>
+</p>
         </div>
     </div>
 </body>
